fix bag-4 in DEVEX-774

--- a/src/app/dashboard/components/order-book/order-book.component.html
+++ b/src/app/dashboard/components/order-book/order-book.component.html
@@ -33,11 +33,11 @@
             Total
           </span>
         </div>
-        <div class="info table__cell-head table__cell-head--tal table__cell-head--p4">
-          <span>
+        <!--<div class="info table__cell-head table__cell-head&#45;&#45;tal table__cell-head&#45;&#45;p4">-->
+          <!--<span>-->
 
-          </span>
-        </div>
+          <!--</span>-->
+        <!--</div>-->
         <div class="price table__cell-head table__cell-head--tal table__cell-head--p4">
           <span>
             Price
@@ -69,10 +69,10 @@
             </span>
           </div>
 
-          <div class="info">
-            <span>
-            </span>
-          </div>
+          <!--<div class="info">-->
+            <!--<span>-->
+            <!--</span>-->
+          <!--</div>-->
 
           <div class="price">
             <span>
