fix login-code popup, fix header desktop menu

--- a/src/app/dashboard/components/trade-history/trade-history.component.scss
+++ b/src/app/dashboard/components/trade-history/trade-history.component.scss
@@ -15,6 +15,9 @@
     &:nth-of-type(odd) {
       background-color: unset;
     }
+    &:hover{
+      cursor: default;
+    }
   }
   ng-scrollbar{
     height: 444px;
