--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -109,6 +109,7 @@
 
           <div class="wrap-input popup__wrap-input">
             <input
+              required
               class="wrap-input__input"
               type="text"
               formControlName="pin"
