--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -15,11 +15,13 @@
     padding: 0 32px;
     align-items: center;
   }
+
   .logo {
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
     align-items: center;
+
     &:after {
       display: inline-block;
       width: 1px;
@@ -31,23 +33,33 @@
         margin-left: 32px;
       }
     }
+
     &__link {
       display: inline-block;
     }
   }
+
   .menu {
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
     height: 100%;
     align-items: center;
+
     &--header-menu {
       margin-left: 20px;
       margin-right: auto;
       @media (min-width: 1400px) {
         margin-left: 32px;
       }
+
+      .menu__link {
+        &:last-child {
+          margin-right: 0;
+        }
+      }
     }
+
     &__item {
       position: relative;
       z-index: 1;
@@ -56,10 +68,12 @@
       display: -ms-flex;
       display: flex;
       align-items: center;
+
       &--with-submenu {
         &:hover {
           .submenu {
             height: auto;
+
             &__list {
               &:before {
                 width: 100%;
@@ -69,6 +83,7 @@
         }
       }
     }
+
     &__link {
       height: 100%;
       display: -webkit-flex;
@@ -86,26 +101,27 @@
         z-index: 5;
       }
 
-      &:last-child {
-        margin-right: 0;
-      }
 
       &:hover {
         color: rgba(255, 255, 255, 1);
         cursor: pointer;
+
         .menu__link-text {
           &:after {
             opacity: 1;
           }
         }
       }
+
       &--active {
         color: rgba(255, 255, 255, 1);
+
         .menu__link-text {
           &:after {
             opacity: 1;
           }
         }
+
         .submenu {
           .menu__link--active {
             .menu__link-text {
@@ -114,12 +130,14 @@
               }
             }
           }
+
           &__link {
             .menu__link-text {
               &:after {
                 opacity: 0;
               }
             }
+
             &:hover {
               .menu__link-text {
                 &:after {
@@ -131,6 +149,7 @@
 
         }
       }
+
       &--drop {
         &:after {
           display: inline-block;
@@ -152,10 +171,48 @@
           }
         }
       }
+
+      &--auth {
+        padding: 0;
+        margin-right: 24px;
+        color: rgba(255, 255, 255, 1);
+
+        &:hover {
+          cursor: default;
+        }
+
+        .menu__link-text {
+          &:after {
+            display: none;
+          }
+        }
+      }
+
+      &--auth--reg {
+        padding: 0;
+        margin-right: 24px;
+      }
+
+      &--auth--log {
+        padding: 0;
+        margin-right: 24px;
+        &:before {
+          content: "";
+          position: relative;
+          top: -2px;
+          display: inline-block;
+          width: 1px;
+          height: 27px;
+          margin-right: 24px;
+          background-color: rgba(255, 255, 255, 0.3);
+        }
+      }
     }
+
     &__link-text {
       position: relative;
       padding-bottom: 5px;
+
       &:after {
         content: '';
         position: absolute;
@@ -169,6 +226,7 @@
       }
     }
   }
+
   .submenu {
     height: 0;
     overflow: hidden;
@@ -179,19 +237,23 @@
     background-color: #2E304D;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+
     &--notification {
       width: 266px;
       font-size: 14px;
       line-height: 16px;
+
       .submenu__link {
         white-space: normal;
       }
     }
+
     &--language {
       right: 0;
       left: auto;
-      top: 52px;
+      top: 31px;
     }
+
     &__list {
       position: relative;
       display: -webkit-flex;
@@ -199,6 +261,7 @@
       display: flex;
       flex-direction: column;
       align-items: stretch;
+
       &:before {
         content: '';
         position: absolute;
@@ -209,11 +272,13 @@
         background-color: $darker-blue;
         transition: width .3s ease;
       }
+
       &--language {
         display: grid;
         grid-template-columns: repeat(2, auto);
       }
     }
+
     &__item {
       &--last {
         text-align: center;
@@ -222,6 +287,7 @@
         background-color: rgba(35, 123, 239, 0.15);
       }
     }
+
     &__link {
       display: -webkit-flex;
       display: -ms-flex;
@@ -231,11 +297,14 @@
       text-decoration: none;
       color: rgba(255, 255, 255, 0.7);
       white-space: nowrap;
+
       &--center {
         justify-content: center;
       }
+
       &:hover {
         color: rgba(255, 255, 255, 1);
+
         .menu__link-text {
           &:after {
             opacity: 1;
@@ -244,6 +313,7 @@
       }
     }
   }
+
   .header-button {
     display: -webkit-flex;
     display: -ms-flex;
@@ -260,6 +330,7 @@
       background-color: #2E304D;
       text-decoration: none;
     }
+
     &__notification-label {
       display: inline-block;
       position: absolute;
@@ -275,6 +346,7 @@
       text-align: center;
     }
   }
+
   .holdings {
     display: -webkit-flex;
     display: -ms-flex;
@@ -287,12 +359,14 @@
     flex-grow: 1;
     align-items: center;
     justify-content: center;
+
     &__title {
       margin-bottom: 4px;
       color: rgba(255, 255, 255, 0.5);
       font-size: 14px;
       line-height: 16px;
     }
+
     &__info {
       position: relative;
       width: 100%;
@@ -317,12 +391,14 @@
         content: "";
       }
     }
+
     &__info-item {
       display: -webkit-flex;
       display: -ms-flex;
       display: flex;
       align-items: center;
     }
+
     &__info-item-icon {
       margin-right: 4px;
       width: auto;
@@ -330,6 +406,7 @@
       vertical-align: middle;
     }
   }
+
   &__auth {
     display: -webkit-flex;
     display: -ms-flex;
@@ -339,10 +416,7 @@
     text-decoration: none;
     justify-content: center;
     align-items: center;
-    &:hover {
-      cursor: pointer;
-      text-decoration: none;
-    }
+
     &--log {
       &:before {
         content: "";
@@ -352,25 +426,47 @@
         margin-right: 24px;
         background-color: rgba(255, 255, 255, 0.3);
       }
+
+      &:hover {
+        cursor: pointer;
+        text-decoration: none;
+      }
+    }
+
+    &--reg {
+      &:hover {
+        cursor: pointer;
+        text-decoration: none;
+      }
     }
   }
+
   .language {
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    align-self: stretch;
-    align-items: center;
-    padding: 0;
-    margin-left: -12px;
-
-    &--mob {
-      flex-direction: column;
-      align-self: auto;
-
-      &:before {
+    &--mob{
+      .menu__link-text{
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+        align-items: center;
+        padding: 0;
+        flex-direction: column;
+        align-self: auto;
+      }
+    }
+    .menu__link{
+      padding: 0;
+    }
+    .menu__link-text{
+      display: -webkit-flex;
+      display: -ms-flex;
+      display: flex;
+      align-self: stretch;
+      align-items: center;
+      &:after{
         display: none;
       }
     }
+
     &__abbr {
       color: #fff;
       text-transform: uppercase;
@@ -392,6 +488,7 @@
       align-self: center;
     }
   }
+
   /*--- elements end ---*/
 }
 
@@ -406,6 +503,7 @@
   &--open {
     height: 100%;
   }
+
   /*--- modificators end ---*/
   /*--- elements start ---*/
   &__top {
@@ -413,6 +511,7 @@
     overflow-y: scroll;
     overflow-x: hidden;
   }
+
   &__inner {
     display: -webkit-flex;
     display: -ms-flex;
@@ -425,12 +524,14 @@
       height: 60px;
     }
   }
+
   &__link {
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
     position: relative;
     justify-content: center;
+
     &--active {
       background-color: $darker-blue;
 
@@ -445,6 +546,7 @@
         content: "";
       }
     }
+
     &-inner {
       width: 20px;
       position: relative;
@@ -454,11 +556,13 @@
       align-items: center;
     }
   }
+
   &__link-burger {
     min-width: 64px;
     max-width: 64px;
     background-color: $darker-blue;
   }
+
   &__submenu {
     display: -webkit-flex;
     display: -ms-flex;
@@ -492,6 +596,7 @@
       margin-top: 4px;
     }
   }
+
   &__burger-content {
     display: none;
 
@@ -507,6 +612,7 @@
       background-position: left bottom;
     }
   }
+
   &__controls-row {
     display: -webkit-flex;
     display: -ms-flex;
@@ -515,17 +621,20 @@
     justify-content: flex-end;
     margin-bottom: 12px;
   }
+
   &__controls-btn {
     margin-right: 16px;
     width: 17px;
     height: 17px;
   }
+
   .account-info {
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
     margin-bottom: 24px;
     margin-left: 16px;
+
     &__img {
       width: 48px;
       height: 48px;
@@ -533,6 +642,7 @@
       border: 1px solid $light-blue;
       margin-right: 8px;
       position: relative;
+
       .info__img-empty {
         font-size: 20px;
         position: absolute;
@@ -541,12 +651,14 @@
         top: 15px;
       }
     }
+
     &__title {
       font-size: 24px;
       line-height: 24px;
       color: #fff;
       margin-bottom: 4px;
     }
+
     &__email {
       text-decoration: none;
       color: $light-blue;
@@ -554,6 +666,7 @@
       line-height: 12px;
     }
   }
+
   .menu-mob {
     display: -webkit-flex;
     display: -ms-flex;
@@ -598,7 +711,8 @@
         &:before {
           display: none;
         }
-        &:after{
+
+        &:after {
           transform: rotate(180deg);
         }
       }
@@ -654,6 +768,7 @@
       white-space: nowrap;
     }
   }
+
   .holdings-mob {
     display: -webkit-flex;
     display: -ms-flex;
@@ -796,6 +911,7 @@
       }
     }
   }
+
   /*--- elements end ---*/
 }
 
