fix select error in refill-fiat DEVEX-733

--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
@@ -30,6 +30,10 @@
       text-decoration: underline;
     }
   }
+  &__closed-error{
+    align-self: center;
+    color: #EB5757;
+  }
 }
 
 .modal__note {
