--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -5,9 +5,11 @@
       <!-- TODO add styles to select--error -->
       <div
         class="select refill__select"
-        [ngClass]="{'select--error': !selectedMerchant}"
       >
-        <div class="select__value select__value--active" (click)="toggleCurrencyDropdown()">
+        <div class="select__value select__value--active"
+             (click)="toggleCurrencyDropdown()"
+             [ngClass]="{'select__value--error': !selectedMerchant}"
+        >
           <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
           {{activeFiat.name}}
         </div>
@@ -73,8 +75,7 @@
         <!--Input error section ends-->
       </div>
 
-      <!-- TODO Add styles -->
-      <div *ngIf="!selectedMerchant">
+      <div class="refill__closed-error" *ngIf="!selectedMerchant">
         - Sorry, refill is closed for current moment!
       </div>
     </div>
