--- a/src/assets/scss/components/_select.scss
+++ b/src/assets/scss/components/_select.scss
@@ -15,6 +15,7 @@
   &--mb20 {
     margin-bottom: 20px;
   }
+
   /*--- modificators end ---*/
   /*--- elements start ---*/
   &__value {
@@ -52,8 +53,19 @@
         border-top-color: $darker-blue;
       }
     }
+    &--error{
+      border-color: $red;
+      ~.select__label{
+        color: $red;
+      }
+      ~.select__line{
+        background-color: $red;
+      }
+      ~.select__triangle {
+        border-top: 5px solid $red;
+      }
+    }
   }
-
   &__label {
     position: absolute;
     top: 10px;
@@ -66,7 +78,6 @@
     font-size: 14px;
     line-height: 16px;
   }
-
   &__icon {
     position: absolute;
     top: 9px;
@@ -78,12 +89,10 @@
       width: 100%;
     }
   }
-
   &__line {
     height: 1px;
     background-color: $grey;
   }
-
   &__triangle {
     position: absolute;
     top: 16px;
@@ -92,7 +101,6 @@
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
   }
-
   &__list {
     position: absolute;
     z-index: 5;
@@ -111,7 +119,6 @@
       background-color: #fff;
     }
   }
-
   &__list-searching {
     position: absolute;
     z-index: 5;
@@ -124,7 +131,6 @@
       display: block;
     }
   }
-
   &__search {
     width: 100%;
     position: relative;
@@ -200,7 +206,6 @@
     padding: 8px 12px;
     text-align: left;
   }
-
   &__list-item-icon {
     width: 21px;
     height: 21px;
@@ -255,6 +260,18 @@
         }
         ~ .select__triangle {
           border-top-color: $light-blue;
+        }
+      }
+      &--error{
+        border-color: $red;
+        ~.select__label{
+          color: $red;
+        }
+        ~.select__line{
+          background-color: $red;
+        }
+        ~.select__triangle {
+          border-top: 5px solid $red;
         }
       }
     }
