DEVEX-811 added switcher

--- a/src/app/dashboard/components/currency-pair-info/currency-search/currency-search.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-search/currency-search.component.html
@@ -33,15 +33,15 @@
       <!-- - ICOs to be closed-->
       <!--</div>-->
       <div class="tabs pair-popup__tabs">
-        <button class="tabs__item" (click)="onChangeTab(Tabs.CRYPTO)" [ngClass]="{'tabs__item--active': currentTab === Tabs.CRYPTO}">
+        <!-- <button class="tabs__item" (click)="onChangeTab(Tabs.CRYPTO)" [ngClass]="{'tabs__item--active': currentTab === Tabs.CRYPTO}">
           Crypto coins
-        </button>
-        <button class="tabs__item" (click)="onChangeTab(Tabs.FIAT)" [ngClass]="{'tabs__item--active': currentTab === Tabs.FIAT}">
+        </button> -->
+        <!-- <button class="tabs__item" (click)="onChangeTab(Tabs.FIAT)" [ngClass]="{'tabs__item--active': currentTab === Tabs.FIAT}">
           Fiat
         </button>
         <button class="tabs__item" (click)="onChangeTab(Tabs.ICO)" [ngClass]="{'tabs__item--active': currentTab === Tabs.ICO}">
           ICO
-        </button>
+        </button> -->
       </div>
     </div>
     <div class="pair-popup__content-wrap">
