--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -1,27 +1,28 @@
 <div class="currency-pair-info" *ngIf="true">
   <div class="currency-pair-info__inner">
-    <!--<div class="currency-pair-info__pair">-->
-      <!--<div class="dropdown currency-pair-info__dropdown">-->
-        <!--&lt;!&ndash;<div class="dropdown__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash;<div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>&ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;<ul class="dropdown__list">&ndash;&gt;-->
-          <!--&lt;!&ndash;<li class="dropdown__item">ETH</li>&ndash;&gt;-->
-          <!--&lt;!&ndash;<li class="dropdown__item">LTC</li>&ndash;&gt;-->
-          <!--&lt;!&ndash;<li class="dropdown__item">DASH</li>&ndash;&gt;-->
-        <!--&lt;!&ndash;</ul>&ndash;&gt;-->
-        <!--<div class="dropdown__btn currency-pair-info__btn" (click)="openSearchBar(0)" style="min-width: 65px;">{{!firstCurrency ? 'BTC' : firstCurrency}}</div>-->
-      <!--</div>-->
-      <!--<div class="currency-pair-info__change-pair"></div>-->
-      <!--<div class="dropdown currency-pair-info__dropdown">-->
-        <!--<div class="dropdown__btn" (click)="openDropdown()">{{ !secondCurrency ? 'USD' : secondCurrency}}</div>-->
-        <!--&lt;!&ndash;<div class="dropdown__btn" (click)="openSearchBar(1)">{{ secondCurrency}}</div>&ndash;&gt;-->
-        <!--<ul class="dropdown__list" *ngIf="marketDropdown">-->
-          <!--<ng-template ngFor let-currency [ngForOf]="marketsArray" , let-index = index>-->
-            <!--<li  class="dropdown__item" (click)="onSelectCurrency(currency.name)" *ngIf="currency.name !== secondCurrency">{{currency.name}}</li>-->
-          <!--</ng-template>-->
-        <!--</ul>-->
-      <!--</div>-->
-    <!--</div>-->
+    <div class="currency-pair-info__pair">
+
+      <div class="dropdown currency-pair-info__dropdown">
+        <!-- <div class="dropdown__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div> -->
+        <div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>
+        <!-- <ul class="dropdown__list">
+          <li class="dropdown__item">ETH</li>
+          <li class="dropdown__item">LTC</li>
+          <li class="dropdown__item">DASH</li>
+        </ul> -->
+      </div>
+      <div class="currency-pair-info__change-pair"></div>
+      <div class="dropdown currency-pair-info__dropdown">
+        <div class="dropdown__btn" (click)="openDropdown()">{{secondCurrency}}</div>
+        <!-- <div class="dropdown__btn" (click)="openSearchBar(1)">{{secondCurrency}}</div> -->
+        <ul class="dropdown__list" *ngIf="marketDropdown">
+          <ng-template ngFor let-currency [ngForOf]="marketsArray" , let-index = index>
+            <li  class="dropdown__item" (click)="onSelectCurrency(currency.name)" *ngIf="currency.name !== secondCurrency">{{currency.name}}</li>
+          </ng-template>
+        </ul>
+      </div>
+
+    </div>
     <div class="currency-pair-info__info" style="min-width: 224px;"
          [ngClass]="{'currency-pair-info__info--up': flarForArrow('up'),
                      'currency-pair-info__info--down': flarForArrow('down')}">
@@ -56,12 +57,12 @@
     <!--</div>-->
   </div>
 
-  <!--<app-currency-search-->
-    <!--*ngIf="showCurrencySearch"-->
-    <!--[currencies]="currencies"-->
-    <!--(closeCurrencySearch)="toggleCurrencySearch()"-->
-    <!--(selectCurrency)="onSelectCurrency($event)">-->
-  <!--</app-currency-search>-->
+  <app-currency-search
+    *ngIf="showCurrencySearch"
+    [currencies]="currencies"
+    (closeCurrencySearch)="toggleCurrencySearch()"
+    (selectCurrency)="onSelectCurrency($event)">
+  </app-currency-search>
 
-  <!--<div class="overlay" *ngIf="showCurrencySearch" (click)="toggleCurrencySearch()"></div>-->
+  <div class="overlay" *ngIf="showCurrencySearch" (click)="toggleCurrencySearch()"></div>
 </div>
