--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -7,7 +7,14 @@
         class="select refill__select"
         [ngClass]="{'select--error': !selectedMerchant}"
       >
-        <div class="select__value select__value--active" (click)="toggleCurrencyDropdown()">
+        <div
+          class="select__value select__value--active"
+          (click)="toggleCurrencyDropdown()"
+          [ngClass]="{
+            'select--error': !selectedMerchant,
+            'select__value--active': selectedMerchant
+          }"
+        >
           <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
           {{activeFiat.name}}
         </div>
