fix text DEVEX-799

--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -1,5 +1,5 @@
 
-<div class="title refill__title" *ngIf="activeCrypto">Make crypto deposit in <span>{{activeCrypto.name}}</span></div>
+<div class="title refill__title" *ngIf="activeCrypto">Crypto deposit <span>{{activeCrypto.name}}</span></div>
 <div class="refill__inputs-wrap">
   <div class="select refill__select">
     <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
