--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -1,4 +1,4 @@
-<div class="title send__title">Make Crypto Withdrawal in <span>{{activeCrypto ? activeCrypto.name : ''}}</span></div>
+<div class="title send__title">Crypto Withdrawal<span>{{activeCrypto ? activeCrypto.name : ''}}</span></div>
 <div class="formWraper" *ngIf="isEnterData">
   <form [formGroup]="form">
     <div class="send__inputs-wrap" *ngIf="activeCrypto">
