--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -1,4 +1,4 @@
-<div class="title send__title">Make Fiat Withdrawal in <span>{{activeFiat ? activeFiat.name : ''}}</span></div>
+<div class="title send__title">Fiat Withdrawal <span>{{activeFiat ? activeFiat.name : ''}}</span></div>
 <div class="formWraper" *ngIf="isEnterData">
   <form [formGroup]="form">
     <div class="send__inputs-wrap">
