--- a/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
@@ -1,4 +1,4 @@
-<div class="title modal__title">Two-Factor authentication by google authentificator</div>
+<div class="title modal__title">Two-Factor authentication by Google Authenticator</div>
 <div class="subtitle modal__subtitle">
   <p>Сonfirm your details</p>
 </div>
@@ -33,7 +33,7 @@
         class="wrap-input__input"
         type="text"
         formControlName="pincode">
-      <label class="wrap-input__label">Authentificator code</label>
+      <label class="wrap-input__label">Authenticator code</label>
       <div class="wrap-input__line"></div>
     </div>
   </div>
