--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -37,14 +37,14 @@
           <!--<a class="sidebar-menu__link"-->
              <!--[routerLinkActive]="['sidebar-menu__link&#45;&#45;active']"-->
              <!--[routerLink]="['/settings/verification']">-->
-            <!--Identity verification-->
+            <!--Verification-->
           <!--</a>-->
         <!--</li>-->
         <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/e-notification']">
-            Email Notifications
+            Notifications
           </a>
         </li>
         <li class="sidebar-menu__item">
