--- a/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="!isSentPin">
-  <div class="title send__title">Two factor autentification</div>
+  <div class="title send__title">Two factor authentication</div>
   <!--if google 2fa enabled start-->
   <form [formGroup]="form">
-    <div class="subtitle send__subtitle">Put the code from Google Authentificator</div>
+    <div class="subtitle send__subtitle">Enter 2FA code</div>
     <div class="wrap-input send__wrap-input"
          [ngClass]="{'wrap-input--error': !form.valid && form.controls['pin'].touched}">
       <input class="wrap-input__input" name="pin" formControlName="pin" required>
-      <label class="wrap-input__label">Authorisation code</label>
+      <label class="wrap-input__label">Authenticator code</label>
       <div class="wrap-input__line"></div>
       <!--Input error section starts-->
       <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span>
