--- a/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
@@ -1,4 +1,4 @@
-<div class="title modal__title">Two-Factor authentication by google authentificator</div>
+<div class="title modal__title">Two-Factor authentication by Google Authenticator</div>
 <div class="subtitle modal__subtitle">
   <p>Download Google Authenticator on your mobile device</p>
 </div>
