--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,45 @@
 <!-- HEADER START-->
 <header class="header">
   <div class="header__inner">
-    <div class="logo"><a class="logo__link" href="#"><img class="logo__img" src="../../assets/img/logo.svg" alt="logo"></a>
+    <div class="logo">
+      <a class="logo__link" href="/">
+        <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             viewBox="0 0 461 107" style="enable-background:new 0 0 461 107;" xml:space="preserve">
+<style type="text/css">
+	.st0 {
+    fill: #FFFFFF;
+  }
+</style>
+          <g>
+	<path class="st0" d="M1.3,64.8c-1.6-7.7-1.6-15.3,0-23c0.3,0,0.6,0,0.9,0c20.3,0,40.7,0,61,0c0.6,0,1,0.1,1.4,0.6
+		c3.5,3.4,6.9,6.8,10.4,10.2c0.7,0.7,0.7,0.8,0,1.5c-3.5,3.4-7,6.9-10.5,10.3c-0.3,0.3-0.7,0.4-1.1,0.4c-20.4,0-40.9,0-61.3,0
+		C1.9,64.8,1.6,64.8,1.3,64.8z"/>
+            <path class="st0" d="M59.1,106.5c-5.2,0-10.3-0.7-15.3-2.2c-1.8-0.5-2.8-2-2.3-3.6c0.5-1.6,2.1-2.4,3.8-1.9
+		c5.4,1.5,10.9,2.2,16.5,1.9c13.1-0.8,24.3-6,33.3-15.6c6.5-7,10.6-15.3,12-24.8c2-13.8-1.5-26.2-10.5-36.9
+		c-8.1-9.7-18.5-15.3-31-17c-7-1-13.8-0.4-20.6,1.6c-1,0.3-1.9,0.3-2.8-0.3c-1-0.7-1.4-1.6-1.3-2.8c0.2-1.2,0.8-2,2-2.3
+		C45.2,2,47.5,1.4,49.7,1c12.7-2.1,24.8-0.3,36,6c14.2,7.9,23.4,19.8,26.7,35.7c3.5,17.1-0.8,32.3-12.3,45.4
+		c-8.3,9.5-18.9,15.2-31.3,17.4c-3.2,0.6-6.5,0.7-9.7,1.1C59.2,106.6,59.2,106.5,59.1,106.5z"/>
+            <path class="st0" d="M3.3,71.8c17.9,0,35.6,0,53.5,0c-0.2,0.3-0.4,0.4-0.5,0.6c-7.5,7.3-15,14.6-22.4,21.9
+		c-0.3,0.3-0.7,0.4-1.1,0.4c-4.7,0-9.5,0-14.2,0c-0.3,0-0.7-0.1-1-0.4C11.3,88.2,6.5,80.9,3.5,72.6C3.4,72.4,3.4,72.1,3.3,71.8z"/>
+            <path class="st0" d="M56.8,34.8c-17.9,0-35.7,0-53.5,0c0.1-0.3,0.2-0.6,0.3-0.9c3-8.3,7.7-15.5,14-21.6c0.3-0.3,0.7-0.4,1.1-0.4
+		c4.7,0,9.5,0,14.2,0c0.3,0,0.7,0.1,1,0.4c7.6,7.4,15.1,14.7,22.7,22.1C56.5,34.5,56.6,34.6,56.8,34.8z"/>
+</g>
+          <g>
+	<path class="st0" d="M176.6,69.4v3.6H149v-39h26.8v3.6h-22.6v13.9h20.2v3.5h-20.2v14.5H176.6z"/>
+            <path class="st0" d="M221.4,72.9l-12.6-17.2l-12.5,17.2h-4.7l14.8-20.1l-13.9-19h4.7L209,49.9l11.7-15.9h4.5l-13.8,18.8l14.9,20.2
+		H221.4z"/>
+            <path class="st0" d="M270,72.9L261,60.4c-1,0.1-2,0.2-3.1,0.2h-10.5v12.4h-4.1v-39h14.6c9.9,0,15.9,5,15.9,13.4
+		c0,6.1-3.2,10.4-8.9,12.3l9.5,13.4H270z M269.7,47.3c0-6.2-4.1-9.8-11.9-9.8h-10.4v19.6h10.4C265.6,57.1,269.7,53.4,269.7,47.3z"/>
+            <path class="st0" d="M319.2,62.5h-21.7l-4.7,10.4h-4.3l17.8-39h4.1l17.8,39h-4.3L319.2,62.5z M317.7,59.2l-9.4-21l-9.4,21H317.7z"
+            />
+            <path class="st0" d="M351.5,37.5h-13.7v-3.6h31.5v3.6h-13.7v35.5h-4.1V37.5z"/>
+            <path class="st0" d="M414.7,69.4v3.6h-27.6v-39h26.8v3.6h-22.6v13.9h20.2v3.5h-20.2v14.5H414.7z"/>
+            <path class="st0" d="M431.8,68.2l1.6-3.2c2.8,2.7,7.7,4.7,12.9,4.7c7.3,0,10.5-3.1,10.5-6.9c0-10.7-24-4.1-24-18.6
+		c0-5.7,4.5-10.7,14.4-10.7c4.4,0,9,1.3,12.1,3.5l-1.4,3.3c-3.3-2.2-7.2-3.2-10.7-3.2c-7.1,0-10.3,3.2-10.3,7.1
+		c0,10.7,24,4.2,24,18.5c0,5.7-4.6,10.6-14.5,10.6C440.4,73.3,434.7,71.2,431.8,68.2z"/>
+</g>
+</svg>
+      </a>
     </div>
     <ul class="menu menu--header-menu">
       <li class="menu__item" routerLinkActive="menu__link--active">
