--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -2,7 +2,7 @@
   <div class="currency-pair-info__inner">
     <div class="currency-pair-info__pair">
 
-      <div class="dropdown currency-pair-info__dropdown">
+      <div class="dropdown currency-pair-info__dropdown" style="min-width: 92px;">
         <!-- <div class="dropdown__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div> -->
         <div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>
         <!-- <ul class="dropdown__list">
