fix currency pair info first btn

--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -2,14 +2,9 @@
   <div class="currency-pair-info__inner">
     <div class="currency-pair-info__pair">
 
-      <div class="dropdown currency-pair-info__dropdown" style="min-width: 92px;">
+      <div class="dropdown currency-pair-info__dropdown currency-pair-info__dropdown--first">
         <!-- <div class="dropdown__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div> -->
         <div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>
-        <!-- <ul class="dropdown__list">
-          <li class="dropdown__item">ETH</li>
-          <li class="dropdown__item">LTC</li>
-          <li class="dropdown__item">DASH</li>
-        </ul> -->
       </div>
       <div class="currency-pair-info__change-pair"></div>
       <div class="dropdown currency-pair-info__dropdown">
