--- a/src/app/funds/balance/send-money/send-step-two/send-inner-transfer/send-inner-transfer.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-inner-transfer/send-inner-transfer.component.html
@@ -4,7 +4,7 @@
   <button class="btn btn--empty-blue"
   (click)="chooseTransfer('By email')"
   >Instant transfer</button>
-  <div class="send__transfer-description">Отправьте моментально перевод внутри биржи по email или nickname</div>
+  <div class="send__transfer-description">Send instant internal transfer to another account using their email or nickname.</div>
 </div>
 <div class="send__row">
   <button class="btn btn--empty-blue"
