try to fix chat 3

--- a/src/app/dashboard/components/chat/chat.component.html
+++ b/src/app/dashboard/components/chat/chat.component.html
@@ -23,7 +23,7 @@
   <div class="widget__header--mob">
     <div class="widget__name-mob">Chat</div>
   </div>
-  <div class="widget__content widget__content--show-all">
+  <div class="widget__content widget__content--show-all" [ngStyle]="scrollStyles">
 
     <div class="widget__chat-wrap">
       <perfect-scrollbar #scrollWrapper>
