--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,8 +10,11 @@
         <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="#">Referral</a></li> -->
       </ul>
       <div class="footer__app-wrap">
-        <div class="footer__app-title">Mobile applications:</div>
-        <div class="footer__app-link-wrap"><a class="footer__app-link" href="#"><img class="footer__app-img" src="../../assets/img/g-play.svg" alt="google-display"></a><a class="footer__app-link" href="#"><img class="footer__app-img" src="../../assets/img/app-store.svg" alt="app-store"></a></div>
+        <div class="footer__app-title">Mobile applications<br>to launch in 2019:</div>
+        <div class="footer__app-link-wrap">
+          <a class="footer__app-link"><img class="footer__app-img" src="../../assets/img/g-play.svg" alt="google-display"></a>
+          <a class="footer__app-link"><img class="footer__app-img" src="../../assets/img/app-store.svg" alt="app-store"></a>
+        </div>
       </div>
     </div>
     <div class="footer__copy">© 2018 EXRATES LTD trade marks belong to their corresponding owners. All rights are reserved</div>
