--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -632,6 +632,7 @@
     margin-left: 16px;
 
     &__img {
+      min-width: 48px;
       width: 48px;
       height: 48px;
       border-radius: 50%;
@@ -641,18 +642,21 @@
 
       .info__img-empty {
         font-size: 20px;
-        position: absolute;
-        left: 20px;
+        display: block;
+        width: 100%;
+        line-height: 48px;
+        text-align: center;
         color: $light-blue;
         top: 15px;
       }
     }
 
     &__title {
-      font-size: 24px;
+      font-size: 14px;
       line-height: 24px;
       color: #fff;
       margin-bottom: 4px;
+      word-break: break-all;
     }
 
     &__email {
