--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -245,8 +245,8 @@
     </ul>
 
     <ul class="menu language">
-      <li class="menu__item menu__item--with-submenu">
-        <a class="menu__link" href="#">
+      <li class="menu__item menu__item--with-submenu menu__item--disabled">
+        <a class="menu__link">
           <span class="menu__link-text">
             <img class="language__flag" src="../../assets/img/flag-en.svg" alt="ru">
             <span class="language__abbr">en</span>
