--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -78,6 +78,18 @@
           }
         }
       }
+      &--disabled {
+        &:hover {
+          .submenu {
+            display: none;
+          }
+          .menu__link{
+            &:hover{
+              cursor: default;
+            }
+          }
+        }
+      }
     }
 
     &__link {
