task 842 and refill fix

--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -91,6 +91,6 @@
   <div class="note__title">Please note:</div>
   <ul class="note__list">
     <li class="note__list-item">Coins will be deposited immediately after <b>2</b> network confirmations</li>
-    <li class="note__list-item">Send only <b>BTC</b> to this deposit address. Sending any other coin or token to this address may result in the loss of your deposit.</li>
+    <li class="note__list-item">Send only <b>{{activeCrypto.name}}</b> to this deposit address. Sending any other coin or token to this address may result in the loss of your deposit.</li>
   </ul>
 </div>
