--- a/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
+++ b/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
@@ -7,6 +7,7 @@
 
       <div class="wrap-input popup__wrap-input">
         <input
+          (input)="onPasswordInput($event)"
           class="wrap-input__input"
           [(ngModel)]="password"
           [type]="getInputType()"
@@ -26,12 +27,17 @@
             <span
               *ngIf="passwordForm.get('password').errors['required']"
               class="wrap-input__message">
-              This field is required.
+              Password is required.
             </span>
           <span
-            *ngIf=" passwordForm.controls['password'].errors['pattern']"
+            *ngIf=" passwordForm.controls['password'].errors['pattern'] || passwordForm.controls['password'].errors['minlength']"
             class="wrap-input__message">
               Should have 8 chars at least, symbols and numbers.
+            </span>
+          <span
+            *ngIf=" passwordForm.controls['password'].errors['maxlength']"
+            class="wrap-input__message">
+              Password cannot be more than 20 characters long
             </span>
         </div>
         <!--Input error section ends-->
@@ -40,13 +46,14 @@
 
       <div class="wrap-input popup__wrap-input">
         <input
+          (input)="onRepeatPasswordInput($event)"
           class="wrap-input__input"
           [(ngModel)]="confirmPass"
           [type]="getInputType()"
           formControlName="confirmPassword"
           [ngClass]="{'input--error': !passwordForm.controls['confirmPassword'].valid && passwordForm.controls['confirmPassword'].touched}"
         >
-        <label class="wrap-input__label" for="">Password</label>
+        <label class="wrap-input__label" for="">Repeat password</label>
         <div class="wrap-input__line"></div>
         <span
           class="wrap-input__show-password"
@@ -61,8 +68,8 @@
               class="wrap-input__message">
               This field is required.
             </span>
-          <span
-            *ngIf="passwordForm.controls['confirmPassword'].errors['passwordConfirm']"
+          <span *ngIf="passwordForm.controls['password'].value !== passwordForm.controls['confirmPassword'].value
+           || passwordForm.controls['confirmPassword'].errors['passwordConfirm']"
             class="wrap-input__message">
               Password is not matches.
             </span>
@@ -70,8 +77,9 @@
         <!--Input error section ends-->
       </div>
       <button class="btn popup__btn" (click)="createUser()"
-              [ngClass]="{'bg-none': passwordForm.valid }" [disabled]="!passwordForm.valid "
-      >Finish registration</button>
+              [ngClass]="{'bg-none': !passwordForm.valid,
+               'popup__btn--active': passwordForm.valid && passwordForm.controls['password'].value === passwordForm.controls['confirmPassword'].value}"
+      >Update password</button>
     </form>
   </div>
 </div>
