--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -16,7 +16,7 @@
             *ngIf="openCurrencyDropdown">
 
           <li class="select__list-item" *ngFor="let currency of fiatNames" (click)="selectCurrency(currency)">
-            <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+            <img [src]="currency.name | getIconUrl" class="select__list-item-icon">
             {{currency.name}}
           </li>
 
@@ -72,6 +72,7 @@
                 *ngFor="let merchant of merchants"
                 (click)="selectMerchant(merchant)"
             >
+              <img [src]="merchant.name | getIconUrl" class="select__list-item-icon">
               <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
               {{merchant.name}}
             </li>
