--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -40,7 +40,7 @@
     </div>
     <div class="currency-pair-info__item" style="min-width: 180px;">
       <div class="currency-pair-info__item-title">24h volume</div>
-      <span class="currency-pair-info__item-value"> {{!currentCurrencyInfo ?  0  : currentCurrencyInfo.volume24h | number:'1.0-0' | replaceNumber}} million  {{ firstCurrency }}</span>
+      <span class="currency-pair-info__item-value"> {{!currentCurrencyInfo ?  0  : currentCurrencyInfo.volume24h | number:'1.0-0' | replaceNumber}} {{ firstCurrency }}</span>
     </div>
     <!--<div class="currency-pair-info__item" *ngIf="userBalanceInfo">-->
       <!--<div class="currency-pair-info__item-title">You have</div>-->
