--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -182,7 +182,7 @@
     </svg>
     </span>
     <span style="vertical-align: middle; color:#A0A0A0;">Avaliable: </span>
-    <a href="#">{{userBalance | roundCurrency: isFiat(0) | formatCurrency}} {{arrPairName[0]}}</a>
+    <!-- <a href="#">{{userBalance | roundCurrency: isFiat(0) | formatCurrency}} {{arrPairName[0]}}</a> -->
     </div>
     <div>
     Fee: {{order.commission | roundCurrency: isFiat(0) | formatCurrency}} {{arrPairName[0]}}
