--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -69,7 +69,7 @@
           <label class="radio">
             <input class="radio__input" type="radio" name="radio-procent">
             <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                  (click)="calculateAmountByTotal(userBalance)">
+                  (click)="calculateAmountByTotal()">
               100%
             </span>
           </label>
@@ -131,19 +131,19 @@
           <span style="vertical-align: middle; margin-right: 4px;">Available: </span>
           <a
             *ngIf="mainTab === 'BUY'"
-            (click)="calculateAmountByTotal(userBalance)"
+            (click)="calculateAmountByTotal()"
           >
             {{ userBalance.cur2?.balance  | roundCurrency: isFiat(userBalance.cur2?.name) | formatCurrency}} {{userBalance.cur2?.name}}
           </a>
           <a
             *ngIf="mainTab === 'SELL'"
-            (click)="calculateAmountByTotal(userBalance)"
+            (click)="calculateAmountByTotal()"
           >
             {{ userBalance.cur1?.balance  | roundCurrency: isFiat(userBalance.cur1?.name) | formatCurrency}} {{userBalance.cur1?.name}}
           </a>
         </div>
         <div>
-          Fee: {{order.commission | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}
+          Fee: {{order.commission | roundCurrency: isFiat(arrPairName[1]) | formatCurrency}} {{arrPairName[1]}}
         </div>
       </div>
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt" style="margin-top: 4px;">
@@ -221,9 +221,18 @@
             <path d="M7.23181 6.84126V8.72983C7.23181 9.08029 7.41189 9.35214 7.56677 9.35214H12V6.21888H7.56677C7.41189 6.21888 7.23181 6.4908 7.23181 6.84126ZM9.05815 7.05851C9.43365 7.05851 9.73913 7.38464 9.73913 7.78551C9.73913 8.18639 9.43365 8.51251 9.05815 8.51251C8.68266 8.51251 8.37718 8.18639 8.37718 7.78551C8.37718 7.38464 8.68266 7.05851 9.05815 7.05851ZM7.56677 10.3633C6.85985 10.3633 6.2847 9.63047 6.2847 8.72983V6.84126C6.2847 5.94062 6.85979 5.20783 7.56677 5.20783H12V3.97574C12 3.35222 11.6172 2.82286 11.0894 2.63991L10.2623 0.325323C10.2155 0.194484 10.12 0.0902034 9.99851 0.0373555C9.87702 -0.0154251 9.74051 -0.0121895 9.6213 0.046523L4.49908 2.57102H1.31579C0.590302 2.57102 0 3.20122 0 3.97574V11.5952C0 12.3698 0.590302 13 1.31579 13H10.6842C11.4097 13 12 12.3698 12 11.5952V10.3633H7.56677ZM9.5581 1.19138L10.0511 2.57109H6.75876L9.5581 1.19138Z"/>
           </svg>
         </span>
-          <span style="vertical-align: middle;">Avaliable: </span>
+          <span style="vertical-align: middle;">Available: </span>
         </span>
-          <a href="#">{{ userBalance  | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}</a>
+          <a
+            *ngIf="mainTab === 'BUY'"
+          >
+            {{ userBalance.cur2?.balance  | roundCurrency: isFiat(userBalance.cur2?.name) | formatCurrency}} {{userBalance.cur2?.name}}
+          </a>
+          <a
+            *ngIf="mainTab === 'SELL'"
+          >
+            {{ userBalance.cur1?.balance  | roundCurrency: isFiat(userBalance.cur1?.name) | formatCurrency}} {{userBalance.cur1?.name}}
+          </a>
         </div>
       </div>
       <div class="row widget__percent-row">
@@ -258,7 +267,7 @@
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-procent">
           <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                (click)="calculateAmountByTotal(userBalance)">
+                (click)="calculateAmountByTotal()">
           100%
         </span>
         </label>
@@ -319,7 +328,18 @@
         </span>
           <span style="vertical-align: middle;">Avaliable: </span>
         </span>
-          <a (click)="calculateAmountByTotal(userBalance)">{{ userBalance  | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}</a>
+          <a
+            *ngIf="mainTab === 'BUY'"
+            (click)="calculateAmountByTotal()"
+          >
+            {{ userBalance.cur2?.balance  | roundCurrency: isFiat(userBalance.cur2?.name) | formatCurrency}} {{userBalance.cur2?.name}}
+          </a>
+          <a
+            *ngIf="mainTab === 'SELL'"
+            (click)="calculateAmountByTotal()"
+          >
+            {{ userBalance.cur1?.balance  | roundCurrency: isFiat(userBalance.cur1?.name) | formatCurrency}} {{userBalance.cur1?.name}}
+          </a>
         </div>
       </div>
       <div class="row widget__percent-row">
@@ -354,7 +374,7 @@
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-procent">
           <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                (click)="calculateAmountByTotal(userBalance)">
+                (click)="calculateAmountByTotal()">
           100%
         </span>
         </label>
@@ -375,7 +395,7 @@
     <button class="btn btn--active widget__trading-btn" (click)="onSubmit()" >{{mainTab === 'BUY' ? 'Buy' : 'Sell'}} {{arrPairName[0]}}</button>
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
         <div class="fee">
-          Fee: {{order.commission | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}
+          Fee: {{order.commission | roundCurrency: isFiat(arrPairName[1]) | formatCurrency}} {{arrPairName[1]}}
         </div>
       </div>
 
