fixed fiat merchant 2

--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -101,7 +101,7 @@
     </div>
     <div class="title refill__fiat-successful-title">Request was created!</div>
     <div class="subtitle refill__fiat-successful-subtitle">
-      Please go to <a href="{{refillData.redirectionUrl}}" class="link">{{selectedMerchant.name}}</a> to make a payment
+      Please go to <a href="{{redirectionUrl}}" class="link">{{selectedMerchant.name}}</a> to make a payment
       <b>{{refillData.params.ok_item_1_price}} {{refillData.params.ok_currency}}</b>
     </div>
     <div class="subtitle refill__fiat-successful-subtitle">
